# robothon-2023-fsm

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md  package.xml  ws_repos.yaml
config/: franka_left_cart_hybrid_motion_force_controller.yaml  homing_pose_franka_left.yaml  homing_pose_franka_right.yaml  robothon_repos.yaml  ws_repos.yaml
config/controllers/: franka_control_node.yaml  franka_left_cart_hybrid_motion_force_controller.yaml  franka_right_cart_hybrid_motion_force_controller.yaml  homing_pose.yaml
config/fsm/: custom_task_order.yaml  default_task_order.yaml
include/hrii_task_board_fsm/utils/: ControllerUtils.h  GeometryMsgs.h
launch/: fake_perception.launch  launch_gripper_only.launch  launch_robot.xml  main_fsm.launch  robothon_homing.launch
rviz/: main_fsm.rviz
scripts/: task_manager.py
src/: fake_perception_node.py  imaging_node.py  main_fsm.cpp
src/tasks/: board_detection_fsm.cpp  homing_fsm.cpp  move_plug_fsm.cpp  move_slider_fsm.cpp  open_door_fsm.cpp  press_button_fsm.cpp  probe_circuit_fsm.cpp  stow_probe_cable_fsm.cpp
srv/: DesiredSliderDisplacement.srv  Homing.srv  MovePlug.srv  MoveSlider.srv  OpenDoor.srv
