<?xml version="1.0"?>
<package format="2">
  <name>hrii_task_board_fsm</name>
  <version>0.0.1</version>
  <description>The hrii_task_board_fsm package</description>

  <maintainer email="mattia.leonori@iit.it">Mattia Leonori</maintainer>

  <license>GNU</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  
  <depend>roscpp</depend>
  <depend>eigen_conversions</depend>
  <depend>hrii_gri_interface</depend>
  <depend>hrii_trajectory_planner</depend>
  <depend>hrii_robothon_msgs</depend>


</package>
